--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mirabella | iOS Developer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    Hello
+  <div class="container">
+    <img src="images/profile.jpg" alt="Mirabella's Photo" class="profile-img" />
+
+    <h1>Hi, I’m Mirabella 👩🏻‍💻</h1>
+    <p class="subtitle">iOS Developer in progress • Apple Developer Academy Student</p>
+
+    <p>I love turning ideas into apps — with clean UI, smooth user experience, and a sprinkle of fun. Currently learning SwiftUI, Combine, and testing.</p>
+
+    <div class="social-links">
+      <a href="mailto:mirabellacn@gmail.com">Email</a>
+      |
+      <a href="https://github.com/mirabellachn" target="_blank">GitHub</a>
+      |
+      <a href="https://linkedin.com/in/mirabellacn" target="_blank">LinkedIn</a>
+    </div>
+
+    <footer>
+      <p>Made with 💖 by Mirabella · 2025</p>
+    </footer>
+  </div>
 </body>
 </html>
