--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="images/profile.jpg" alt="Mirabella's Photo" class="profile-img" />
+    <img src="Images/profile.jpg" alt="Mirabella's Photo" class="profile-img" />
 
     <h1>Hi, I’m Mirabella 👩🏻‍💻</h1>
     <p class="subtitle">iOS Developer in progress • Apple Developer Academy Student</p>
